# flight-arc

./: .gitignore  README.md  pyproject.toml  render.yaml
.claude/: settings.local.json
config/: mission.yaml  simulation.yaml  uncertainties.yaml  vehicle.yaml
outputs/: nominal_latest.json
scripts/: run_montecarlo.py  run_nominal.py  sweep_orbits.py  validate_config.py  validate_sim.py
src/: config.py  mission_runner.py
src/api/: __init__.py  app.py  jobs.py  models.py  overrides.py  serializers.py
src/atmosphere/: us_standard_1976.py
src/attitude/: controller.py  initial_conditions.py  quaternion.py
src/events/: autosequence.py  event.py  standard_events.py
src/gravity/: gravity.py
src/guidance/: base.py  gravity_turn.py  kick_optimizer.py  peg.py  pitch_program.py
src/montecarlo/: analysis.py  dispersions.py  runner.py
src/orbital/: elements.py  insertion.py
src/propagator/: equations_of_motion.py  integrator.py  state.py
src/report/: mission_report.py  plots.py  tables.py
src/vehicle/: mass_model.py  stage.py  vehicle.py
tests/integration/: test_montecarlo.py  test_nominal_trajectory.py
tests/unit/: test_atmosphere.py  test_events.py  test_gravity.py  test_orbital_elements.py  test_vehicle.py
